# nexcore

./: .gitignore  CLAUDE.md  Cargo.toml
crates/cobol-arithmetic/: CLAUDE.md  Cargo.toml
crates/cobol-arithmetic/src/: add.rs  compute.rs  divide.rs  lib.rs  multiply.rs  result.rs  store.rs  subtract.rs
crates/cobol-core/: CLAUDE.md  Cargo.toml
crates/cobol-core/src/: category.rs  config.rs  decimal_ext.rs  ebcdic.rs  editing.rs  error.rs  identifiers.rs  lib.rs  numeric_parse.rs  traits.rs
crates/cobol-data/: CLAUDE.md  Cargo.toml
crates/cobol-data/src/: decode.rs  discovery.rs  discriminator.rs  encoding.rs  error.rs  export.rs  layout.rs  lib.rs  record.rs  redefines.rs  session.rs
crates/cobol-intel/: CLAUDE.md  Cargo.toml
crates/cobol-intel/src/: error.rs  lib.rs
crates/cobol-intel/src/graph/: builder.rs  edge.rs  index.rs  mod.rs  node.rs  storage.rs
crates/cobol-intel/src/intel/: business.rs  control_flow.rs  data_complexity.rs  data_flow.rs  dependency.rs  external.rs  inter_program.rs  mod.rs  patterns.rs  process_discovery.rs  structural.rs
crates/cobol-intel/src/query/: ast.rs  executor.rs  lexer.rs  mod.rs  parser.rs
crates/cobol-intel/src/repl/: mod.rs
crates/cobol-intel/src/saved/: mod.rs
crates/cobol-intel/tests/: carddemo_integration.rs
crates/cobol-io/: CLAUDE.md  Cargo.toml
crates/cobol-io/src/: file_status.rs  file_traits.rs  indexed.rs  lib.rs  relative.rs  resolver.rs  sequential.rs
crates/cobol-jcl/: Cargo.toml
crates/cobol-jcl/src/: ast.rs  error.rs  graph.rs  lib.rs  parser.rs  proc_gen.rs  resolve.rs
crates/cobol-move/: CLAUDE.md  Cargo.toml
crates/cobol-move/src/: corresponding.rs  diagnostics.rs  engine.rs  initialize.rs  lib.rs
crates/cobol-runtime/: CLAUDE.md  Cargo.toml
crates/cobol-runtime/src/: call.rs  display.rs  inspect.rs  intrinsics.rs  lib.rs  perform_stack.rs  prelude.rs  program.rs  ref_mod.rs  special_regs.rs  string_verb.rs  unstring_verb.rs
crates/cobol-rustify/: CLAUDE.md  Cargo.toml
crates/cobol-rustify/src/: config.rs  error.rs  hints.rs  lib.rs  manifest.rs  patch.rs  plan.rs  report.rs  review.rs  safety.rs  target_config.rs
crates/cobol-rustify/src/dsl/: cobol_attrs.rs  dsl_ast.rs  expr_extract.rs  grammar_validation_test.rs  integration_test.rs  mod.rs  process_emitter.rs  rules_emitter.rs  schema_emitter.rs  transform_emitter.rs  type_mapping.rs  writer.rs
crates/cobol-rustify/src/rules/: mod.rs  transform.rs
crates/cobol-sort/: CLAUDE.md  Cargo.toml
crates/cobol-sort/src/: collating.rs  config.rs  external.rs  in_memory.rs  lib.rs  merge.rs  procedure.rs  sort_engine.rs  sort_key.rs  sort_return.rs
crates/cobol-sql/: CLAUDE.md  Cargo.toml
crates/cobol-sql/src/: duckdb_runtime.rs  host_var.rs  lib.rs  runtime.rs  sqlca.rs
crates/cobol-sql/tests/: duckdb_integration.rs
crates/cobol-transpiler/: CLAUDE.md  Cargo.toml
crates/cobol-transpiler/src/: ast.rs  diagnostics.rs  error.rs  hints.rs  lib.rs  symbol_table.rs  transpile.rs
crates/cobol-transpiler/src/codegen/: attributes.rs  data_gen.rs  field_analysis.rs  mod.rs  proc_gen.rs  rust_writer.rs  screen_gen.rs
crates/cobol-transpiler/src/parser/: bms_parser.rs  bms_references.rs  copy_expand.rs  copybook.rs  data_listener.rs  error_collector.rs  file_listener.rs  hierarchy.rs  mod.rs  pic_parser.rs  preprocess.rs  proc_listener.rs  sql_extract.rs
crates/cobol-transpiler/tests/: compile_test.rs  end_to_end.rs
crates/cobol-types/: CLAUDE.md  Cargo.toml
crates/cobol-types/src/: alpha_edited.rs  cobol_array.rs  comp1_float.rs  comp2_float.rs  comp_binary.rs  figurative.rs  level88.rs  lib.rs  numeric_edited.rs  packed_decimal.rs  pic_a.rs  pic_x.rs  redefines.rs  var_array.rs  zoned_decimal.rs
crates/nex-doctor/: Cargo.toml
crates/nex-doctor/src/: connectivity.rs  diagnostics.rs  error.rs  lib.rs  topology.rs  types.rs
crates/nex-kafka/: Cargo.toml
crates/nex-kafka/src/: client.rs  decoder.rs  error.rs  filter.rs  lib.rs  models.rs  pii.rs
crates/nex-registry/: Cargo.toml
crates/nex-registry/src/: client.rs  error.rs  lib.rs  models.rs  resolver.rs
crates/nexflow-cli/: Cargo.toml
crates/nexflow-cli/src/: format.rs  main.rs  project.rs
crates/nexflow-cli/tests/: cli_integration.rs
crates/nexflow-codegen/: Cargo.toml
crates/nexflow-codegen/src/: gen_error.rs  gen_handler.rs  gen_middleware.rs  gen_router.rs  gen_schema.rs  gen_service.rs  lib.rs  naming.rs  types.rs
crates/nexflow-codegen/src/java/: avro.rs  builder.rs  migration.rs  mod.rs  naming.rs  pii.rs  statemachine.rs  types.rs  validation.rs
crates/nexflow-codegen/src/rust/: expression.rs  mod.rs  rules.rs  xform.rs
crates/nexflow-codegen/tests/: generate_account_api.rs  generate_account_service.rs
crates/nexflow-compiler/: Cargo.toml
crates/nexflow-compiler/src/: diagnostics.rs  lib.rs  resolve.rs  validate.rs
crates/nexflow-compiler/tests/: validate_account_system.rs
crates/nexflow-parser/: Cargo.toml
crates/nexflow-parser/src/: lib.rs
crates/nexflow-parser/src/ast/: api.rs  common.rs  mod.rs  nexquery.rs  proc.rs  rules.rs  schema.rs  service.rs  transform.rs
crates/nexflow-parser/src/parse/: api_builder.rs  helpers.rs  mod.rs  nexquery_builder.rs  proc_builder.rs  rules_builder.rs  schema_builder.rs  service_builder.rs  transform_builder.rs
crates/nexflow-parser/tests/: parse_api_examples.rs  parse_nexquery_examples.rs  parse_proc_examples.rs  parse_rules_examples.rs  parse_schema_examples.rs  parse_service_examples.rs  parse_transform_examples.rs
crates/nexmig-cli/: CLAUDE.md  Cargo.toml
crates/nexmig-cli/src/: analyze.rs  audit_cmd.rs  bms_cmd.rs  build_graph_cmd.rs  check.rs  cobol_pipeline.rs  cobol_read.rs  compile_cmd.rs  corpus_cmd.rs  data_analyze_cmd.rs  decode_cmd.rs  diagnose_cmd.rs  diff_cmd.rs  discover_cmd.rs  dsl_cmd.rs  init_cmd.rs  main.rs  parse_cmd.rs  preprocess.rs  project_cmd.rs  query_cmd.rs  rustify_cmd.rs  transpile_cmd.rs  util.rs  workspace.rs
crates/nexmig-cli/src/pipeline/: config.rs  mod.rs  phase0.rs
crates/nexmig-cli/src/scan/: args.rs  db.rs  discover.rs  mod.rs  ndjson.rs  (+5 more)
(+336 files in other folders)
