[workspace]
resolver = "2"
members = [
    "crates/nexflow-parser",
    "crates/nexflow-codegen",
    "crates/nexflow-compiler",
    "crates/nexflow-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "LicenseRef-Proprietary"
authors = ["Chandra Mohn"]

[workspace.dependencies]
# Parser
antlr-rust = "0.3.0-beta"

# Error handling
thiserror = "2"
miette = { version = "7", features = ["fancy"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Testing
pretty_assertions = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
