[package]
name = "cobol-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core traits, config, and error types for the COBOL runtime"

[lints]
workspace = true

[dependencies]
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
