[package]
name = "cobol-data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "COBOL binary data intelligence: layout, decode, REDEFINES, discovery"

[lints]
workspace = true

[dependencies]
cobol-transpiler = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
