[package]
name = "cobol-rustify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Phase 2 rustification: transform transpiler output into idiomatic Rust"

[lints]
workspace = true

[features]
default = []
direct-emit = ["dep:cobol-transpiler"]

[dependencies]
cobol-transpiler = { workspace = true, optional = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
nexflow-parser = { workspace = true }
