[package]
name = "cobol-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "COBOL data types: PackedDecimal, PicX, CompBinary, CobolArray, Level88"

[lints]
workspace = true

[dependencies]
cobol-core = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
byteorder = { workspace = true }
derive_more = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
