[package]
name = "nexflow-codegen"
description = "Code generation from Nexflow DSL ASTs to Rust/Axum services"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
nexflow-parser = { path = "../nexflow-parser" }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
