[package]
name = "nexflow-compiler"
description = "Cross-grammar validation, linking, and type checking for Nexflow DSLs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
nexflow-parser = { path = "../nexflow-parser" }
thiserror = { workspace = true }
miette = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
